# quark

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HF_MODEL_CARD.md  LICENSE  README.md  bench.json  heldout.json  pyproject.toml  qasmbench_results.json  quark.pt
.github/ISSUE_TEMPLATE/: bug.md  dataset.md  rewrite.md
.github/workflows/: test.yml
demo/: app.py  requirements.txt
docs/: design.md
examples/: quickstart.ipynb
paper/: quark.tex
quark/: __init__.py  _style.py  adapters.py  cli.py  dedupe.py  enc.py  eval_.py  feat.py  pairs.py  quark.pt  search.py  train.py  verify.py
scripts/: heldout.py  qasmbench.py
tests/: test_adapters.py  test_dedupe.py  test_discrimination.py  test_enc.py  test_feat.py  test_pairs.py  test_search.py  test_verify.py
