[project]
name = "quark"
version = "0.2.0"
description = "vector embeddings for quantum circuits"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "QuantumX" }]
dependencies = [
    "qiskit>=1.0",
    "torch>=2.1",
    "numpy>=1.24",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
quark = "quark.cli:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["quark*"]
